Create basic HTML layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="drum-machine">
+      <button data-action="" class="drum-pad">E</button>
+      <button data-action="" class="drum-pad">R</button>
+      <button data-action="" class="drum-pad">T</button>
+      <button data-action="" class="drum-pad">Y</button>
+      <button data-action="" class="drum-pad">D</button>
+      <button data-action="" class="drum-pad">F</button>
+      <button data-action="" class="drum-pad">G</button>
+      <button data-action="" class="drum-pad">H</button>
+    </div>
     <script src="./Script.js"></script>
   </body>
 </html>
