Add data actions to drum pads
This will be used in the script to access a button's data action

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <div class="drum-machine">
-      <button data-action="" class="drum-pad">E</button>
-      <button data-action="" class="drum-pad">R</button>
-      <button data-action="" class="drum-pad">T</button>
-      <button data-action="" class="drum-pad">Y</button>
-      <button data-action="" class="drum-pad">D</button>
-      <button data-action="" class="drum-pad">F</button>
-      <button data-action="" class="drum-pad">G</button>
-      <button data-action="" class="drum-pad">H</button>
+      <button data-action="kick" class="drum-pad">E</button>
+      <button data-action="snare" class="drum-pad">R</button>
+      <button data-action="crash" class="drum-pad">T</button>
+      <button data-action="clap" class="drum-pad">Y</button>
+      <button data-action="perc" class="drum-pad">D</button>
+      <button data-action="roll" class="drum-pad">F</button>
+      <button data-action="hi-hat" class="drum-pad">G</button>
+      <button data-action="bass" class="drum-pad">H</button>
     </div>
-    <script src="./Script.js"></script>
+    <script type="module" src="./src/script.js"></script>
   </body>
 </html>
