Fix invalid script file reference
The correct script file is now accessible for the website functionality.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <button data-action="hi-hat" class="drum-pad">G</button>
       <button data-action="bass" class="drum-pad">H</button>
     </div>
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="/src/Script.js"></script>
   </body>
 </html>
